formulaire d'enregistrement fini

--- a/index.html
+++ b/index.html
@@ -1,17 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <link rel="stylesheet" href="reset.css">
+    <title>S'identifier</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="container">
+        <form action="confirmation.html" method="POST" id="register" class="form">
+            <h1>S'enregistrer</h1>
+            <div class="form-field">
+                <label for="nom">Nom :</label>
+                <input type="text" name="nom" id="nom" autocomplete="off">
+                <small></small>
+            </div>
 
+            <div class="form-field">
+                <label for="prénom">Prénom :</label>
+                <input type="text" name="prenom" id="prenom" autocomplete="off">
+                <small></small>
+            </div>
+
+            <div class="form-field">
+                <label for="email">Email:</label>
+                <input type="text" name="email" id="email" autocomplete="off">
+                <small></small>
+            </div>
+
+            <div class="form-field">
+                <label for="password">Mot de passe :</label>
+                <input type="password" name="password" id="password" autocomplete="off">
+                <small></small>
+            </div>
+
+
+            <div class="form-field">
+                <label for="confirmPassword">Confirmer votre mot de passe :</label>
+                <input type="password" name="confirmPassword" id="confirmPassword" autocomplete="off">
+                <small></small>
+            </div>
+
+            <div class="form-field">
+                <input class="btn" type="submit" value="S'enregistrer">
+            </div>
+        </form>
+    </div>
 
     <script src="script.js"></script>
 </body>
