rectification de l'envoi

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <form action="confirmation.html" method="POST" id="register" class="form">
+        <form action="confirmation.html" method="GET" id="register" class="form">
             <h1>S'enregistrer</h1>
             <div class="form-field">
                 <label for="nom">Nom :</label>
