--- a/confirmation.html
+++ b/confirmation.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-
-    <p>test</p>
     
+    <script src="confirmation.js"></script>
 </body>
 </html>
